--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="container-fluid cursor">
             <div class="row">
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title">Hello, i am MOchamad KAmil Arrasyid</h2>
+                <h2 class="hero_title">Hello, i am Mochamad Kamil Arrasyid</h2>
                 <p class="hero_desc">I am Junior Programmer</p>
               </div>
             </div>
